# Minecraft-XDP-eBPF

./: .gitignore  Cargo.toml  LICENSE  README.md  bert.c  build.rs  build.sh  common.h  license.S  license_include.S  minecraft_filter.c  whitelist.conf  xdp_loader.c
.github/: dependabot.yml
.github/workflows/: c.yml  release.yml  rust.yml
c/: build.sh  common.h  config.h  minecraft_filter.c  minecraft_helper.h  minecraft_networking.c  minecraft_networking.h  protocol.h  stats.h  varint.h  vmlinux.h
c/tests/: protocol_test.c
loader/: config.rs  ebpf.rs  logging.rs  main.rs  metrics.rs
src/: common.rs  config.rs  ebpf.rs  logging.rs  main.rs  mapimpl.rs  metrics.rs  shutdown.rs
tests/: c_unit_tests.rs
xdp/: config.h  minecraft_filter.c  protocol.h  stats.h  varint.h
xdp/tests/: protocol_test.c
