[package]
name = "xdp-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = "0.13.1"
log = "0.4.28"
signal-hook = "0.3.18"
anyhow = "1.0.100"
libc = "0.2.178"
prometheus = "0.14"
lazy_static = "1.4"
tiny_http = "0.12"
fern = { version = "0.7", features = ["colored"] }
colored = "3.0"
chrono = "0.4"
file-rotate = "0.8"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
