[package]
name = "xdp-loader"
version = "3.0.0"
edition = "2024"

# userspace loader lives in loader/ instead of the default src/
[[bin]]
name = "xdp-loader"
path = "loader/main.rs"

[dependencies]
aya = "0.14"
log = "0.4.33"
signal-hook = "0.4.4"
anyhow = "1.0.103"
# only the text encoder is used, default features would pull in protobuf
prometheus = { version = "0.14", default-features = false }
tiny_http = "0.12"
fern = { version = "0.7", features = ["colored"] }
colored = "3.1"
chrono = "0.4"
file-rotate = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[profile.release]
# the packet hot path lives in the kernel; the loader itself is not
# performance sensitive, so optimize it for size
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
